<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c8">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textAlignment="gravity"
        android:visibility="visible"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:text="@string/Quantity"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:id="@+id/Order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="coffeeorder"
            android:text="@string/Submit"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amt" />

        <TextView
            android:id="@+id/Ncoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="8dp"
            android:padding="5dp"
            android:text="@string/Zero"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/quantity"
            app:layout_constraintTop_toBottomOf="@+id/quantity" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/quantity"
            app:layout_constraintTop_toBottomOf="@+id/extraChocolate" />

        <TextView
            android:id="@+id/amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <Button
            android:id="@+id/add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:foregroundGravity="top"
            android:gravity="center"
            android:onClick="increase"
            android:text="@string/add"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Ncoffee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Ncoffee" />

        <Button
            android:id="@+id/sub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:onClick="decrease"
            android:text="@string/sub"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Ncoffee"
            app:layout_constraintStart_toEndOf="@+id/Ncoffee"
            app:layout_constraintTop_toTopOf="@+id/Ncoffee" />

        <CheckBox
            android:id="@+id/whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:onClick="WhippedCream"
            android:text="@string/Whipped_Cream"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toppings" />

        <CheckBox
            android:id="@+id/extraChocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="Extrachocolate"
            android:text="@string/Extra_Chocolate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whippedCream" />

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:text="@string/Toppings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ncoffee" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/extra1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/whippedCream"
            app:layout_constraintStart_toEndOf="@+id/whippedCream"
            app:layout_constraintTop_toTopOf="@+id/whippedCream" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/extra2"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/extraChocolate"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/whippedCream" />

        <EditText
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>